--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc -b"
+    "dev": "tsc -b && npx prisma generate && node dist/index.js"
   },
   "keywords": [],
   "author": "",
